--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: mi-app-de-tareas
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn mi_app_de_tareas.wsgi:application"
+    startCommand: "gunicorn organizador.wsgi:application"
     staticPublishPath: staticfiles
