Update configuration files and dependencies
- Modified `organizador/settings.py` to adjust settings.
- Updated `render.yaml` for deployment configuration.
- Updated `requirements.txt` to include new dependencies.

--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: mi-app-de-tareas
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn organizador.wsgi:application"
+    startCommand: "gunicorn organizador.wsgi"
     staticPublishPath: staticfiles
